# pagerduty-on-call-to-slack

./: .dockerignore  Cargo.toml  Dockerfile  README.md
scripts/: build.sh
src/: main.rs  on_call.rs  slack.rs
