[package]
name = "pagerduty-to-slack"
version = "0.1.0"
authors = ["Arran France <arran@arranfrance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "0.12"

chrono = { version = "0.4", features = ["serde"] }